--- a/src/components/NotesSidebar/NotesTitle.css
+++ b/src/components/NotesSidebar/NotesTitle.css
@@ -1,4 +1,4 @@
-.group__title__logo{
+.grouplogo{
     margin: 1vw 0 1vw 0.5vw;
     border-radius: 4vh 0 0 4vh;
     height: 10vh;
@@ -13,7 +13,7 @@
     font-weight: 600;
 }
 
-.title__logo{
+.titlelogo{
     height: 7vh;
     width: 7vh;
     border-radius: 50%;
@@ -26,7 +26,13 @@
     color: white;
 }
 
-.highlighted__title{
+.titlehighlight{
     background-color: #F7ECDC;
     color: black;
+}
+
+@media screen and (max-width:500px){
+    .grouplogo{
+        width: 100vh;
+    }
 }
