--- a/src/components/Popup/popup.css
+++ b/src/components/Popup/popup.css
@@ -36,7 +36,7 @@
   }
   
   .input > input {
-    width: 17vw;
+    width: 55%;
     height: 3vh;
     border: 2px solid grey;
     border-radius: 6vh;
@@ -45,7 +45,8 @@
     font-weight: 600;
   }
   
-  .color__input {
+  .colorinput {
+  
     font-size: 3vh;
     font-weight: 600;
     display: flex;
@@ -55,7 +56,7 @@
     margin: 2vh 1vh 1vh 1vh;
   }
   
-  .color__input__color {
+  .inputcolor {
     display: flex;
     gap: 1vw;
   }
@@ -93,7 +94,7 @@
       background-color: #6691FF;
   }
   
-  .close {
+  .create {
     height: 2rem;
     width: 23rem;
     display: flex;
@@ -101,7 +102,7 @@
     margin: 1vh 1vh 1vh 1vh;
   }
   
-  .close > button {
+  .create > button {
     margin-top: 1rem;
     height: 5vh;
     width: 8vw;
@@ -110,6 +111,7 @@
     border: none;
     border-radius: 4vh;
     background-color: black;
+    cursor: pointer;
   }
   
   .highlight{
@@ -117,3 +119,123 @@
       border-radius: 6vh;
   }
   
+
+::-webkit-scrollbar {
+    display: none;
+  }
+
+.closebtn button{
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width:500px) {
+    .popup {
+        /* position: fixed;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        width: 90vw;
+        height: 35vh;
+        border-radius: 2vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2vh;
+        z-index: 9999; */
+        height: 30vh;
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        border: none;
+        border-radius: 0.2rem;
+        padding: 20px;
+        margin: auto;
+      }
+      
+      .title {
+        text-align: left;
+        height: 5vh;
+        width: 90vw;
+        font-size: 3.2vh;
+        font-weight: 700;
+        margin-left: 5vw;
+      }
+      
+      .input {
+        height: 8vh;
+        width: 100%;
+        font-size: 4vw;
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        gap: 2vw;
+        align-items: center;
+        margin: 1vh 1vh 1vh 1vh;
+      }
+      
+      .input > input {
+          width: 60vw;
+          height: 3vh;
+          border: 2px solid grey;
+          border-radius: 6vh;
+          padding: 0.5rem;
+          font-size: 2vh;
+          font-weight: 600;
+      }
+      
+      /* .mobile__popup__color__input{
+          height: 5vh;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          gap: 3vw;
+          align-items: center;
+      }
+      
+      .mobile__popup__color__input > span{
+          font-size: large;
+          font-weight: 600;
+      }
+      
+      .mobile__popup__color__input__color{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 2vw;
+      }
+      
+      .mobile__popup__close {
+        height: 5vh;
+        width: 90vw;
+        display: flex;
+        justify-content: flex-end;
+        margin: 1vh 1vh 1vh 1vh;
+      }
+      
+      .mobile__popup__close > button {
+        margin-top: 1rem;
+        height: 6vh;
+        width: 25vw;
+        color: white;
+        font-weight: 500;
+        border: none;
+        border-radius: 4vh;
+        background-color: black;
+      } */
+
+      
+}
