--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -31,7 +31,7 @@
     font-size: 1rem;
 }
 
-.popup{
+.popupbody{
     position: fixed;
     top: 0;
     left: 0;
@@ -52,7 +52,10 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
-
-::-webkit-scrollbar {
-    display: none;
+/* 
+@media screen and (max-width:500px){
+  .sidebar{
+      width: 100vw;
   }
+
+} */
