--- a/src/components/NotesContent/NotesContent.css
+++ b/src/components/NotesContent/NotesContent.css
@@ -38,4 +38,16 @@
     text-align: left;
     margin: 5vh 2vh 0 0;
     font-weight: 500;
+    text-align: justify;
+}
+
+@media screen and (max-width:500px){
+    .contentbody{
+        width: 90vw;
+        margin: auto;
+    }
+
+    .datetime{
+        width: 25vw;
+    }
 }
