--- a/src/components/NotesSidebar/NotesTitle.css
+++ b/src/components/NotesSidebar/NotesTitle.css
@@ -33,6 +33,31 @@
 
 @media screen and (max-width:500px){
     .grouplogo{
-        width: 100vh;
+        height: 10vh;
+        width: 90vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 2vh 0 2vh 3vh;
+        background-color: blueviolet;
+    }
+
+    .titlelogo{
+        height: 9vh;
+        width: 9vh;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3vh;
+        font-weight: 600;
+    }
+    
+    .titlehighlight{
+        text-align: left;
+        font-size: 3vh;
+        font-weight: 600;
+        background-color: #F7ECDC;
+
     }
 }
