--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -3,7 +3,7 @@
     height: 100vh;
 }
 
-.title{
+.maintitle{
     text-align: left;
     font-size: 1.5rem;
     font-weight: 600;
@@ -28,7 +28,7 @@
     justify-content: center;
     gap: 0.5rem;
     align-items: center;
-    font-size: 1rem;
+    font-size: medium;
 }
 
 .popupbody{
@@ -52,10 +52,3 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
-/* 
-@media screen and (max-width:500px){
-  .sidebar{
-      width: 100vw;
-  }
-
-} */
